Tests/Lite/Parse/no-module.silt
id : ∀ {A: Type} A -> A
-- expected-error@-1 {{missing required top level module}}
id x = x

